# flwr-pass

./: README_GTG.md  prompt.md  pyproject.toml  run.sh  run_gtg.sh
passexample/: __init__.py  client_app.py  client_app_gtg.py  gtg_shapley.py  server_app.py  server_app_gtg.py  task.py
tmp/: 1.md  2.md  bug_analysis.md  fix_summary.md  flow chart.md  information.md  oscillation_analysis.md  prompt.md
