[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pass-fl"
version = "1.0.0"
description = "PASS: Parameter Audit based Secure and Fair Federated Learning Scheme"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "passexample.server_app:app"
clientapp = "passexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 20
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 16
# PASS hyperparameters
sigma-squared = 0.01
gamma = 0.9
alpha = 0.95
beta = 1.75
dataset = "mnist"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.2

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
