[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pass-fl"
version = "1.0.0"
description = "PASS: Parameter Audit based Secure and Fair Federated Learning Scheme"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "passexample.server_app_gtg:app"
clientapp = "passexample.client_app_gtg:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-evaluate = 0.5
local-epochs = 2
learning-rate = 0.01
batch-size = 64
# PASS hyperparameters
alpha = 0.2
beta = 1.75
dataset = "cifar10"
# GTG-Shapley hyperparameters (Optimized)
gtg-sampling-rounds = 10
gtg-within-threshold = 0.005
gtg-between-threshold = 0.01

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.2

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
