[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pass-fl"
version = "1.0.0"
description = "PASS: Parameter Audit based Secure and Fair Federated Learning Scheme"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "passexample.server_app_gtg:app"
clientapp = "passexample.client_app_gtg:app"

[tool.flwr.app.config]
num-server-rounds = 20
fraction-evaluate = 0.5
local-epochs = 4
learning-rate = 0.01
batch-size = 64
# PASS hyperparameters
alpha = 0.6     # 移动平均系数，增加历史权重以减少波动
beta = 2.0      # 阈值系数，threshold = 1/(beta*N) = 0.05
dataset = "cifar10"
# GTG-Shapley hyperparameters
gtg-sampling-rounds = 30
gtg-within-threshold = 0.005
gtg-between-threshold = 0.005
gtg-convergence-threshold = 0.05
gtg-guided-sampling-m = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.5

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
